# smart-fetch

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml  pypi.yaml
docs/: README.md  config.md  exporting.md  hydration.md  index.md  low-level.md  since.md
smart_extract/: __init__.py  bulk_utils.py  cli_utils.py  crawl_utils.py  fix_stats.py  fix_utils.py  hydrate_utils.py  iter_utils.py  lifecycle.py  ndjson.py  resources.py  timing.py
smart_extract/cli/: autopilot.py  bulk.py  cli_utils.py  crawl.py  cure.py  export.py  fix.py  hydrate.py  main.py
smart_extract/fixes/: __init__.py  inline.py  meds.py  obs.py
smart_extract/tasks/: __init__.py  inline.py  meds.py  obs.py
smart_fetch/: __init__.py  bulk_utils.py  cli_utils.py  crawl_utils.py  filtering.py  hydrate_utils.py  iter_utils.py  lifecycle.py  merges.py  ndjson.py  resources.py  symlinks.py  timing.py
smart_fetch/cli/: bulk.py  bundle.py  crawl.py  export.py  hydrate.py  main.py  reset_symlinks.py  single.py
smart_fetch/tasks/: __init__.py  epofcare.py  inline.py  loc.py  meds.py  obs.py  org.py  pract.py
tests/: test_autopilot.py  test_bulk.py  test_bundle.py  test_cli.py  test_crawl.py  test_export.py  test_fix_inline.py  test_fix_meds.py  test_fix_obs.py  test_hydrate.py  test_hydrate_epofcare.py  test_hydrate_inline.py  test_hydrate_loc.py  test_hydrate_meds.py  test_hydrate_obs.py  test_hydrate_org.py  test_hydrate_pract.py  test_merges.py  test_ndjson.py  test_single.py  test_symlinks.py  utils.py
